--- a/projet.html
+++ b/projet.html
@@ -16,9 +16,11 @@
    	    <nav>
    	    	<h1>Reservia</h1>
    	   	 <ul>
+          <div id="conteneur">
    	   	 	<li><a href="#">Hèbergements</a> </li>
    	   	 	<li><a href="#">Activités</a> </li>
    	   	 	<li><a href="#">S'inscrire</a> </li>
+         </div>
    	   	 </ul>
    	    </nav>
    	 </header>
