--- a/projet.html
+++ b/projet.html
@@ -2,25 +2,19 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8"/>
-	<link rel="stylescheet" href="style.css" />
+	<link rel="stylescheet" href="projet2.css" />
 	<Title>Reservia</Title>
 </head>
 
 
 <body>
-   <div id="haut de la page">
    	 <header>
-   	   	  <div id="titre principal">
-   	   </div>
-
    	    <nav>
    	    	<h1>Reservia</h1>
-   	   	 <ul>
-          <div id="conteneur">
+   	   	 <ul id="top">
    	   	 	<li><a href="#">Hèbergements</a> </li>
    	   	 	<li><a href="#">Activités</a> </li>
    	   	 	<li><a href="#">S'inscrire</a> </li>
-         </div>
    	   	 </ul>
    	    </nav>
    	 </header>
@@ -33,15 +27,17 @@
      		<input type="text" name="ville" id="ville" placeholder="Marseille,France"/>
      	</p>
      	   <p>Filtres</p>
+            <div id="conteneur">
            <li>Economique</li>
            <li>Familial</li>
            <li>Romantique</li>
            <li>Animaux autorisés</li>
+         </div>
 
 
      <section>
      	<h3>Hébergements à Marseille</h3><br>
-     	<div id="conteneur">
+     	<div id="conteneur2">
      		<div class="photo 1">Auberge la Cannebière </div>
      		<div class="photo 2">Hôtel du port </div>
      		<div class="photo 3">Hôtel les mouettes </div>
@@ -52,7 +48,7 @@
      	</div>	
 
      	<h3>Les plus populaires</h3><br>
-     	<div id="conteneur">
+     	<div id="conteneur3">
      		<div class="photo 1">Hôtel Le soleil du matin </div>
      		<div class="photo 2">Au coeur de l'eau Chambres d'hôtes </div>
      		<div class="photo 3">Hôtel Tout bleu et blanc </div>
@@ -61,7 +57,7 @@
 
      	<h3>Activités à Marseille</h3><br>
 
-     <div id="conteneur">
+     <div id="conteneur4">
      	<div class="photo 1">Vieux port </div>
      		<div class="photo 2">Fort de Pomégues </div>
      		<div class="photo 3">Iles du Frioul </div>
