--- a/projet.html
+++ b/projet.html
@@ -41,7 +41,19 @@
         <i class="fas fa-map-marker-alt"></i>
       </p>
 
-
+    <aside>
+        <div id="conteneur2">
+         <div class="filtres">Filtres</div>
+         <div class="Economique">Economique</div>
+         <i class="fas fa-money-bill-wave"></i>
+         <div class="Familial">Familial</div>
+         <i class="fas fa-child"></i>
+         <div class="Romantique">Romantique</div>
+         <i class="fad fa-heart-circle"></i>
+         <div class="Animaux">Animaux autorisés</div>
+         <i class="fas fa-dog"></i>
+        </div>
+        </aside>
 
 
 
