--- a/projet.html
+++ b/projet.html
@@ -110,4 +110,25 @@
       </div>
 </section>
 
+<footer>
+    
+  <div id="Apropos">
+    <h1>A propos</h1>
+      <p>Fonctionnement du site <br>Conditions générales de vente<br>Conditions générales de vente<br>Données et confidentialité</p>
+  </div>
+
+  <div id="Noshébergements">
+    <h1>Nos hébergements</h1>
+       <p>Charte qualité<br>Soumettre votre hôtel</p>
+    </div>
+
+    <div id="Assistance">
+      <h1>Assitance</h1>
+         <p>Centre d'aide<br>Nous contacter</p>
+    </div>
+</footer>
+
+     </div>
+
 </body>
+</html>
