disposition des liens
Mise en place des liens du site en haut à droite .
Ajout du css avec effet visuel lorsqu'il y'a un passage de souris.

--- a/projet.html
+++ b/projet.html
@@ -14,3 +14,10 @@
  <header class="header">
   <!-- Début de haut de la page-->
   <img class="logo_reservia" src="photos/reservia.png" alt="logo de reservia" />
+  <nav class="disposition_Nav">
+  <li><a class="disposition_hebergement" href="#accomodation">Hébergement</a></li>
+  <li><a class="disposition_activity" href="#activity">Activités</a></li>
+  <li><a class="disposition_inscrire" href="#">S'inscrire</a></li>
+ </nav>
+ </header>
+ 
