--- a/projet.html
+++ b/projet.html
@@ -20,4 +20,10 @@
   <li><a class="disposition_inscrire" href="#">S'inscrire</a></li>
  </nav>
  </header>
- 
+     
+ <section class="titles">
+   <header class="headertitle">
+     <h1 class="title">Trouver votre hébergement pour des vacances de rêve</h1> 
+     <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
+   </header>
+
