Barre de recherche
Mise en place d'une barre de recherche pour Ville avec un champ de saisie et un bouton de recherche.
Mise en place de css et flexbox pour la mise en forme de la barre de recherche

--- a/projet.html
+++ b/projet.html
@@ -27,3 +27,10 @@
      <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
    </header>
 
+   <form class="search_form" action="" method="GET">
+     <span class=search_form_icone>
+      <i class="fas fa-map-marker-alt search_form_icone"></i></span>
+     <input class="search_input" type="search" placeholder="Marseille, France">
+     <button class="search_input_button">Rechercher</button>
+   </form>
+
