Titre filtre & icone de recherche économique
première partie de la barre de filtre et son css

--- a/projet.html
+++ b/projet.html
@@ -34,3 +34,13 @@
      <button class="search_input_button">Rechercher</button>
    </form>
 
+   <div class="closed_filters">
+      <h2 class="filters_Title">Filtres</h2>
+      <div class="closed_filters_filtres">
+      <div class="closed_filters_filtres_icon">
+        <i class="fas fa-money-bill-wave closed_filters_filtres_icon2" aria-hidden="true"></i>
+      </div>
+        <span class="closed_filters_economic">Économique</span>
+    </div>
+
+
