Icone de recherche Familial
Seconde partie de la Barre de filtre

--- a/projet.html
+++ b/projet.html
@@ -42,5 +42,13 @@
       </div>
         <span class="closed_filters_economic">Économique</span>
     </div>
+    
+    <div class="closed_filters_filtres">
+     <div class="closed_filters_filtres_icon">
+      <i class="fas fa-child closed_filters_filtres_icon2" aria-hidden="true"></i>
+     </div>
+      <span class="closed_filters_family">Familial</span>
+    </div>
+    
 
 
