--- a/projet.html
+++ b/projet.html
@@ -49,6 +49,12 @@
      </div>
       <span class="closed_filters_family">Familial</span>
     </div>
-    
+
+     <div class="closed_filters_filtres">
+       <div class="closed_filters_filtres_icon">
+        <i class="fas fa-heart closed_filters_filtres_icon2" aria-hidden="true"></i>
+       </div>
+         <span class="closed-filters_Romantic">Romantique</span>
+     </div>
 
 
