Icone de recherche Dog
Last étape pour la barre de Filtre

--- a/projet.html
+++ b/projet.html
@@ -57,4 +57,13 @@
          <span class="closed-filters_Romantic">Romantique</span>
      </div>
 
+     <div class="closed_filters_filtres">
+       <div class="closed_filters_filtres_icon">
+        <i class="fas fa-dog closed_filters_filtres_icon2" aria-hidden="true"></i>
+       </div>
+         <span class="closed_filters_Dog">Animaux autorisés</span>
+       </div>
+     </div>
+     
+
 
