Information sur les logements disponibles
mise ne place du logo information en html et css ainsi que d'une phrase indicative

--- a/projet.html
+++ b/projet.html
@@ -65,5 +65,11 @@
        </div>
      </div>
      
+      <div class="closed_information">
+       <div class="closed_information_i"><i class="fas fa-info closed_information_i_icon" aria-hidden="true"></i></div>
+       <p class="information_Text">Plus de 500 logements sont disponibles dans cette ville</p>
+     </div>
+</section> 
+
 
 
