Article comportant les informations de l'auberge
une Section qui comporte plusieurs sous section pour faire le système de boite et intégrer dans chaque sous div un article avec les informations.
chaque div aura un css propore pour la mise en page

--- a/projet.html
+++ b/projet.html
@@ -71,5 +71,26 @@
      </div>
 </section> 
 
+<section class="accomodation" id="accomodation">
 
+  <div class="accomodation_marseille">
+    <h2 class="accomodation_marseille_title">Hébergements à Marseille</h2>
+   <article class="auberge_la_Cannebière">
+  <a href="#">
+    <figure class="figure">
+      <img  class="accomodation_marseille_img" src="photos/aubergelacannebiere.jpg" alt="photo de la chambre" />
+      <figcaption class="figcaption">
+        <h4 class="figcaption_title_auberge">Auberge la Cannebière</h4>
+      </figcaption>
+    </figure>
+    <p class="accomodation_marseille_info_auberge">Nuit à partir de <strong>25€</strong></p>
+     <div class="accomodation_marseille_allstar">
+      <i class="fas fa-star accomodation_marseille_star"></i>
+      <i class="fas fa-star accomodation_marseille_star"></i>
+      <i class="fas fa-star accomodation_marseille_star"></i>
+      <i class="fas fa-star accomodation_marseille_star"></i>
+      <i class="far fa-star accomodation_marseille_star"></i>
+     </div>
+    </a>
+     </article>
 
