changement de position des liens

--- a/projet.html
+++ b/projet.html
@@ -20,6 +20,7 @@
   <li><a class="disposition_inscrire" href="#">S'inscrire</a></li>
  </nav>
  </header>
+ <!-- Titre principaux-->
      
  <section class="titles">
    <header class="headertitle">
