Correction de la section des titres

--- a/projet.html
+++ b/projet.html
@@ -22,11 +22,12 @@
  </header>
  <!-- Titre principaux-->
      
- <section class="titles">
-   <header class="headertitle">
-     <h1 class="title">Trouver votre hébergement pour des vacances de rêve</h1> 
-     <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
-   </header>
+<section class="titles">
+     <header class="headertitle">
+       <h1 class="title">Trouver votre hébergement pour des vacances de rêve</h1> 
+       <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
+     </header>
+</section>
 
    <form class="search_form" action="" method="GET">
      <span class=search_form_icone>
