Ajout du span pour le bouton recherche

--- a/projet.html
+++ b/projet.html
@@ -28,13 +28,14 @@
        <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
      </header>
 </section>
-
+ <!-- Barre de recherche-->
    <form class="search_form" action="" method="GET">
-     <span class=search_form_icone>
-      <i class="fas fa-map-marker-alt search_form_icone"></i></span>
-     <input class="search_input" type="search" placeholder="Marseille, France">
-     <button class="search_input_button">Rechercher</button>
-   </form>
+       <span class=search_form_icone>
+        <i class="fas fa-map-marker-alt search_form_icone"></i></span>
+       <input class="search_input" type="search" placeholder="Marseille, France">
+       <button class="search_input_button">
+        <span class="search_input_button_S">Rechercher</span>
+        
 
    <div class="closed_filters">
       <h2 class="filters_Title">Filtres</h2>
