Ajout de l'icone recherche pour la version mobil

--- a/projet.html
+++ b/projet.html
@@ -35,7 +35,9 @@
        <input class="search_input" type="search" placeholder="Marseille, France">
        <button class="search_input_button">
         <span class="search_input_button_S">Rechercher</span>
-        
+        <i class="search_input_button_icon fas fa-search"></i>
+       </button>
+     </form>
 
    <div class="closed_filters">
       <h2 class="filters_Title">Filtres</h2>
