modification barre de filtre

--- a/projet.html
+++ b/projet.html
@@ -48,33 +48,41 @@
         <span class="closed_filters_economic">Économique</span>
     </div>
     
-    <div class="closed_filters_filtres">
-     <div class="closed_filters_filtres_icon">
-      <i class="fas fa-child closed_filters_filtres_icon2" aria-hidden="true"></i>
-     </div>
-      <span class="closed_filters_family">Familial</span>
-    </div>
+    <!-- Filtres -->
+      <div class="closed_filters">
+        <h2 class="filters_title">Filtres</h2>
+        <div class="closed_filters_filtres">
+        <div class="closed_filters_filtres_icon">
+          <i class="fas fa-money-bill-wave closed_filters_filtres_icon2" aria-hidden="true"></i>
+        </div>
+          <span class="closed_filters_mix">Économique</span>
+      </div>
 
-     <div class="closed_filters_filtres">
+      <div class="closed_filters_filtres">
        <div class="closed_filters_filtres_icon">
-        <i class="fas fa-heart closed_filters_filtres_icon2" aria-hidden="true"></i>
+        <i class="fas fa-child closed_filters_filtres_icon2" aria-hidden="true"></i>
        </div>
-         <span class="closed-filters_Romantic">Romantique</span>
-     </div>
+        <span class="closed_filters_mix">Familial</span>
+      </div>
 
-     <div class="closed_filters_filtres">
-       <div class="closed_filters_filtres_icon">
-        <i class="fas fa-dog closed_filters_filtres_icon2" aria-hidden="true"></i>
+       <div class="closed_filters_filtres">
+         <div class="closed_filters_filtres_icon">
+          <i class="fas fa-heart closed_filters_filtres_icon2" aria-hidden="true"></i>
+         </div>
+           <span class="closed_filters_mix">Romantique</span>
        </div>
-         <span class="closed_filters_Dog">Animaux autorisés</span>
+
+       <div class="closed_filters_filtres">
+         <div class="closed_filters_filtres_icon">
+          <i class="fas fa-dog closed_filters_filtres_icon2" aria-hidden="true"></i>
+         </div>
+           <span class="closed_filters_mix">Animaux autorisés</span>
+         </div>
        </div>
-     </div>
-     
-      <div class="closed_information">
-       <div class="closed_information_i"><i class="fas fa-info closed_information_i_icon" aria-hidden="true"></i></div>
-       <p class="information_Text">Plus de 500 logements sont disponibles dans cette ville</p>
-     </div>
-</section> 
+       <div class="closed_information">
+         <div class="closed_information_i"><i class="fas fa-info closed_information_i_icon" aria-hidden="true"></i></div>
+         <p class="information_Text">Plus de 500 logements sont disponibles dans cette ville</p>
+       </div>
 
 <section class="accomodation" id="accomodation">
 
