--- a/projet.html
+++ b/projet.html
@@ -84,26 +84,123 @@
          <p class="information_Text">Plus de 500 logements sont disponibles dans cette ville</p>
        </div>
 
-<section class="accomodation" id="accomodation">
+<!-- Partie Hébergement à Marseille-->
+  <section class="accomodation" id="accomodation">
 
-  <div class="accomodation_marseille">
-    <h2 class="accomodation_marseille_title">Hébergements à Marseille</h2>
-   <article class="auberge_la_Cannebière">
-  <a href="#">
-    <figure class="figure">
-      <img  class="accomodation_marseille_img" src="photos/aubergelacannebiere.jpg" alt="photo de la chambre" />
-      <figcaption class="figcaption">
-        <h4 class="figcaption_title_auberge">Auberge la Cannebière</h4>
-      </figcaption>
-    </figure>
-    <p class="accomodation_marseille_info_auberge">Nuit à partir de <strong>25€</strong></p>
-     <div class="accomodation_marseille_allstar">
-      <i class="fas fa-star accomodation_marseille_star"></i>
-      <i class="fas fa-star accomodation_marseille_star"></i>
-      <i class="fas fa-star accomodation_marseille_star"></i>
-      <i class="fas fa-star accomodation_marseille_star"></i>
-      <i class="far fa-star accomodation_marseille_star"></i>
-     </div>
-    </a>
+    <div class="accomodation_marseille">
+      <h2 class="accomodation_marseille_title">Hébergements à Marseille</h2>
+      <article class="accomodation_marseille_articles">
+       <a href="#">
+       <figure class="figure">
+          <img  class="accomodation_marseille_img" src="photos/aubergelacannebiere.jpg" alt="photo de la chambre" />
+          <figcaption class="figcaption">
+            <h4 class="figcaption_title">Auberge la Cannebière</h4>
+          </figcaption>
+        </figure>
+        <p class="accomodation_marseille_info">Nuit à partir de <strong>25€</strong></p>
+         <div class="accomodation_marseille_allstar">
+          <i class="fas fa-star accomodation_marseille_star"></i>
+          <i class="fas fa-star accomodation_marseille_star"></i>
+          <i class="fas fa-star accomodation_marseille_star"></i>
+          <i class="fas fa-star accomodation_marseille_star"></i>
+          <i class="far fa-star accomodation_marseille_star"></i>
+         </div>
+        </a>
+       </article>
+
+      <article class="accomodation_marseille_articles">
+      <a href="#">
+      <figure class="figure">
+        <img  class="accomodation_marseille_img" src="photos/hotelduport.jpg" alt="photo de la chambre">
+        <figcaption class="figcaption" />
+          <h4 class="figcaption_title">Hôtel du port</h4>
+        </figcaption>
+      </figure>
+      <p class="accomodation_marseille_info">Nuit à partir de <strong>52€</strong></p>
+       <div class="accomodation_marseille_allstar">
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+       </div>
+      </a>
+    </article>
+
+      <article class="accomodation_marseille_articles">
+      <a href="#">
+      <figure class="figure">
+        <img  class="accomodation_marseille_img" src="photos/lesmouettes.jpg" alt="photo de la chambre" />
+        <figcaption class="figcaption">
+          <h4 class="figcaption_title">Hôtel les mouettes</h4>
+        </figcaption>
+      </figure>
+      <p class="accomodation_marseille_info">Nuit à partir de <strong>76€</strong></p>
+       <div class="accomodation_marseille_allstar">
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="far fa-star accomodation_marseille_star"></i>
+       </div>
+      </a>
+    </article>
+
+      <article class="accomodation_marseille_articles">
+      <a href="#">
+      <figure class="figure">
+        <img  class="accomodation_marseille_img" src="photos/lamer.jpg" alt="photo de la chambre" />
+        <figcaption class="figcaption">
+          <h4 class="figcaption_title">Hôtel de la mer</h4>
+        </figcaption>
+      </figure>
+      <p class="accomodation_marseille_info">Nuit à partir de <strong>46€</strong></p>
+       <div class="accomodation_marseille_allstar">
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="far fa-star accomodation_marseille_star"></i>
+        <i class="far fa-star accomodation_marseille_star"></i>
+       </div>
+      </a>
+    </article>
+
+      <article class="accomodation_marseille_articles">
+      <a href="#">
+      <figure class="figure">
+        <img  class="accomodation_marseille_img" src="photos/lepanier.jpg" alt="photo de la chambre" />
+        <figcaption class="figcaption">
+          <h4 class="figcaption_title">Auberge Le Panier</h4>
+        </figcaption>
+      </figure>
+      <p class="accomodation_marseille_info">Nuit à partir de <strong>23€</strong></p>
+       <div class="accomodation_marseille_allstar">
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="far fa-star accomodation_marseille_star"></i>
+       </div>
+      </a>
+    </article>
+
+      <article class="accomodation_marseille_articles">
+      <a href="">
+      <figure class="figure">
+        <img  class="accomodation_marseille_img" src="photos/chezamina.jpg" alt="photo de la chambre"/>
+        <figcaption class="figcaption">
+          <h4 class="figcaption_title">Hôtel_chez_Amina</h4>
+        </figcaption>
+      </figure>
+      <p class="accomodation_marseille_info">Nuit à partir de <strong>96€</strong></p>
+       <div class="accomodation_marseille_allstar">
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+        <i class="fas fa-star accomodation_marseille_star"></i>
+       </div>
+      </a>
      </article>
-
+      <p class="show_more">Afficher plus</p>
+   </div>
