aside most popular

--- a/projet.html
+++ b/projet.html
@@ -204,3 +204,59 @@
      </article>
       <p class="show_more">Afficher plus</p>
    </div>
+
+   <!-- Les Hébergements les plus populaires-->
+        <aside class="most_popular">
+          <div class="most_popular_header">
+            <h2 class="most_popular_header_title">Les plus populaires</h2>
+            <div class="most_popular_header_icon">
+              <i class="fas fa-chart-line most_popular_header_icon_icon"></i>
+            </div>
+          </div>
+          <div class="most_popular_accomodation">
+            <div class="most_popular_accomodation_img">
+             <img class="most_popular_accomodation_img_img" src="photos/lesoleil.jpg" alt="Image de l'Hôtel Le soleil du matin">
+              <div class="most_popular_accomodation_title">
+                <h3 class="most_popular_accomodation_title_title">Hôtel Le soleil du matin</h3>
+                <p class="most_popular_accomodation_description">Nuit à partir de <strong>128€</strong></p>
+                <div class="most_popular_accomodation_allstar">
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                  </div>
+                </div>
+              </div>
+          
+              <div class="most_popular_accomodation_img">
+                <img class="most_popular_accomodation_img_img" src="photos/aucoeur.jpg" alt="Image de la Chambre d'hôte Au cœur de l'eau">
+                <div class="most_popular_accomodation_title">
+                  <h3 class="most_popular_accomodation_title_title">Au cœur de l'eau Chambres d'hôtes</h3>
+                  <p class="most_popular_accomodation_description">Nuit à partir de <strong>71€</strong></p>
+                  <div class="most_popular_accomodation_allstar">
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="far fa-star fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            
+              <div class="most_popular_accomodation_img">
+                <img class="most_popular_accomodation_img_img" src="photos/toutbleu.jpg" alt="Image de l'Hôtel Tout bleu et Blanc" />
+                <div class="most_popular_accomodation_title">
+                  <h3 class="most_popular_accomodation_title_title">Hôtel Tout bleu et Blanc</h3>
+                  <p class="most_popular_accomodation_description">Nuit à partir de <strong>68€</strong></p>
+                  <div class="most_popular_accomodation_allstar">
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="fas fa-star fa-star"></i>
+                    <i class="far fa-star fa-star"></i>
+                  </div>
+                </div>
+              </div> 
+      </aside>
+    </section>
