Ajout de la partie Footer

--- a/projet.html
+++ b/projet.html
@@ -335,3 +335,30 @@
       </div>
     </div>   
    </section>
+
+   <!-- Pied de page-->
+      <footer class="footer">
+       <div class="footer_body">
+        <div class="footer_body_body">
+          <h4 class="footer_body_title">A propos</h4>
+          <a href="#" class="footer_body_link">Fonctionnement du site</a>
+          <a href="#" class="footer_body_link">Conditions générales de vente</a>
+          <a href="#" class="footer_body_link">Données et confidentialité</a>
+        </div>
+
+        <div class="footer_body_body">
+          <h4 class="footer_body_title">Nos hébergements</h4>
+          <a href="#" class="footer_body_link">Chartes qualité</a>
+          <a href="#" class="footer_body_link">Soumettre votre hôtel</a>
+        </div>
+
+     
+         <div class="footer_body_body">
+          <h4 class="footer_body_title">Assistance</h4>
+          <a href="#" class="footer_body_link">Centre d'aide</a>
+          <a href="#" class="footer_body_link">Nous contacter</a>
+        </div>
+      </div>
+    </footer>
+  </body>
+  </html>
