changement des marges/modification du nav/sup du header pour les 2 titres

--- a/projet.html
+++ b/projet.html
@@ -263,7 +263,7 @@
           <div class="activity_1_4 activity_css">
            <a href="#">
          <div class="activity_1_4_img">
-          <img class="activity_1_4_img_1_4" src="photos/vieuxport.jpg" alt="Photo du Vieux port" />
+          <img class="activity_1_4_img_1_4 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/vieuxport.jpg" alt="Photo du Vieux port" />
         </div>
         <div class="activity_title_img">
         <h3 class="activity_title">Vieux Port</h3>
@@ -275,7 +275,7 @@
           <div class="activity_2 activity_css">
             <a href="#">
             <div class="activity_2_3_5_6_img">
-            <img class="activity_2_img_2" src="photos/pomegues.jpg" alt="Photo du fort de Pomègues" />
+            <img class="activity_2_img_2 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/pomegues.jpg" alt="Photo du fort de Pomègues" />
           </div>
           <div class="activity_title_img">
           <h3 class="activity_title">Fort de Pomègues</h3>
@@ -286,7 +286,7 @@
         <div class="activity_3 activity_css">
          <a href="#">
           <div class="activity_2_3_5_6_img"> 
-          <img class="activity_3_img_3" src="photos/frioul.jpg" alt="Photo de l'île du Frioul" />
+          <img class="activity_3_img_3 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/frioul.jpg" alt="Photo de l'île du Frioul" />
           </div>
           <div class="activity_title_img">
           <h3 class="activity_title">L'île du Frioul</h3>
@@ -298,7 +298,7 @@
           <div class="activity_1_4 activity_css">
            <a href="#">
             <div class="activity_1_4_img activity_1_2_3_4_5_6_img">
-            <img class="activity_1_4_img_1_4" src="photos/calanques.jpg" alt="Photo du Parc National des Calanques" />
+            <img class="activity_1_4_img_1_4 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/calanques.jpg" alt="Photo du Parc National des Calanques" />
             </div>
             <div class="activity_title_img">
             <h3 class="activity_title">Parc National des Calanques</h3>
@@ -310,7 +310,7 @@
             <div class="activity_5_6 activity_css">
             <a href="#">
             <div class="activity_2_3_5_6_img activity_1_2_3_4_5_6_img">
-            <img class="activity_5_6_img_5_6" src="photos/notredame.jpg" alt="Photo de Notre-Dame-de-la-Garde" />
+            <img class="activity_5_6_img_5_6 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/notredame.jpg" alt="Photo de Notre-Dame-de-la-Garde" />
             </div>
             <div class="activity_title_img">
             <h3 class="activity_title">Notre-Dame-de-la-Garde</h3>
@@ -320,7 +320,7 @@
            <div class="activity_5_6 activity_css">
            <a href="#">
             <div class="activity_2_3_5_6_img activity_1_2_3_4_5_6_img">
-            <img class="activity_5_6_img_5_6" src="photos/longchamp.jpg" alt="Photo du Parc Longchamp" />
+            <img class="activity_5_6_img_5_6 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/longchamp.jpg" alt="Photo du Parc Longchamp" />
             </div>
             <div class="activity_title_img">
             <h3 class="activity_title">Parc Longchamp</h3>
