--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
   <header class="header">
 <!-- Début de haut de la page-->
    <img class="logo_reservia" src="photos/reservia.png" alt="logo de reservia" />
-   <div class="disposition_Nav">
+   <ul class="disposition_Nav">
     <li class="position_log_in"><a href="#">S'inscrire</a></li>
     <li class="position_activity"><a href="#activity">Activités</a></li>
     <li class="position_accomodation"><a href="#accomodation">Hébergement</a></li>
-   </div>
+   </ul>
   </header>
      <!-- Titre principaux--> 
   <section class="titles">
-    <header class="headertitle">
       <h1 class="title">Trouver votre hébergement pour des vacances de rêve</h1> 
       <h2 class="second_title"> En plein centre ville ou en pleine nature</h2>
-    </header>
   </section>
       <!-- Barre de recherche-->
-    <form class="search_form" action="" method="GET">
+    <form class="search_form" action="#" method="GET">
      <span class=search_form_icone>
       <i class="fas fa-map-marker-alt search_form_icone"></i></span>
      <input class="search_input" type="search" placeholder="Marseille, France">
@@ -72,6 +70,7 @@
            <span class="closed_filters_mix">Animaux autorisés</span>
          </div>
        </div>
+       
        <div class="closed_information">
          <div class="closed_information_i"><i class="fas fa-info closed_information_i_icon" aria-hidden="true"></i></div>
          <p class="information_Text">Plus de 500 logements sont disponibles dans cette ville</p>
