--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservia</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="breakpoint_mobil.css">
-  <link rel="stylesheet" href="breakpoint_tablette.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/breakpoint_mobil.css">
+  <link rel="stylesheet" href="css/breakpoint_tablette.css">
   <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer=""></script>
 </head>
 
