mod/size img activités desktop/mobil emplacement header/tablette most popular column

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-<!-- Coprs de la page-->
+<!-- Coprs de la page-->  
   <header class="header">
 <!-- Début de haut de la page-->
    <img class="logo_reservia" src="photos/reservia.png" alt="logo de reservia" />
    <ul class="disposition_Nav">
     <li class="position_log_in"><a href="#">S'inscrire</a></li>
     <li class="position_activity"><a href="#activity">Activités</a></li>
-    <li class="position_accomodation"><a href="#accomodation">Hébergement</a></li>
+    <li class="position_accomodation"><a href="#accomodation">Hébergements</a></li>
    </ul>
   </header>
      <!-- Titre principaux--> 
@@ -42,12 +42,13 @@
      <!-- Filtres -->
       <div class="closed_filters">
         <h2 class="filters_title">Filtres</h2>
+
         <div class="closed_filters_filtres">
         <div class="closed_filters_filtres_icon">
           <i class="fas fa-money-bill-wave closed_filters_filtres_icon2" aria-hidden="true"></i>
         </div>
           <span class="closed_filters_mix">Économique</span>
-      </div>
+        </div>
 
       <div class="closed_filters_filtres">
        <div class="closed_filters_filtres_icon">
@@ -101,14 +102,14 @@
        </article>
 
       <article class="accomodation_marseille_articles">
-      <a href="#">
-      <figure class="figure">
+       <a href="#">
+       <figure class="figure">
         <img  class="accomodation_marseille_img" src="photos/hotelduport.jpg" alt="photo de la chambre">
         <figcaption class="figcaption" >
           <h4 class="figcaption_title">Hôtel du port</h4>
         </figcaption>
-      </figure>
-      <p class="accomodation_marseille_info">Nuit à partir de <strong>52€</strong></p>
+       </figure>
+       <p class="accomodation_marseille_info">Nuit à partir de <strong>52€</strong></p>
        <div class="accomodation_marseille_allstar">
         <i class="fas fa-star accomodation_marseille_star"></i>
         <i class="fas fa-star accomodation_marseille_star"></i>
@@ -116,8 +117,8 @@
         <i class="fas fa-star accomodation_marseille_star"></i>
         <i class="fas fa-star accomodation_marseille_star"></i>
        </div>
-      </a>
-    </article>
+       </a>
+      </article>
 
       <article class="accomodation_marseille_articles">
       <a href="#">
@@ -205,6 +206,7 @@
               <i class="fas fa-chart-line most_popular_header_icon_icon"></i>
             </div>
           </div>
+
           <div class="most_popular_accomodation">
             <div class="most_popular_accomodation_img">
              <img class="most_popular_accomodation_img_img" src="photos/lesoleil.jpg" alt="Image de l'Hôtel Le soleil du matin">
@@ -258,9 +260,9 @@
 <!-- Les activités à Marseille-->
     <section class="activity" id="activity">
        <h2 class="activity_header">Activités à Marseille</h2>
-        <div class="activity_all">
-          <div class="activity_1_4 activity_css">
-           <a href="#">
+       <div class="activity_all">
+        <div class="activity_1_4 activity_css">
+         <a href="#">
          <div class="activity_1_4_img">
           <img class="activity_1_4_img_1_4 activity_1_2_3_4_5_6_img_1_2_3_4_5_6" src="photos/vieuxport.jpg" alt="Photo du Vieux port" />
         </div>
@@ -332,6 +334,7 @@
 <!-- Pied de page-->
     <footer class="footer">
       <div class="footer_body">
+
        <div class="footer_body_body">
         <h4 class="footer_body_title">A propos</h4>
         <a href="#" class="footer_body_link">Fonctionnement du site</a>
