--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <!-- En-tête de la page -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Reservia</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/breakpoint_mobil.css">
